my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: strange
  labels:
    app: my-strange-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-strange-app
  template:
    metadata:
      labels:
        app: my-strange-app
    spec:
      containers:
      - name: strange
        image: dhineshdine/multibranch-sample
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: strange-service
  namespace: strange
spec:
  selector:
    app: my-strange-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
